syntax = "proto3";
package pos.timelock.v1;

option go_package = "pos/x/timelock/types";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/any.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";
import "amino/amino.proto";

// OperationStatus represents the current state of a queued operation
enum OperationStatus {
  // OPERATION_STATUS_UNSPECIFIED is the default value
  OPERATION_STATUS_UNSPECIFIED = 0;

  // OPERATION_STATUS_QUEUED means the operation is waiting for delay to pass
  OPERATION_STATUS_QUEUED = 1;

  // OPERATION_STATUS_EXECUTED means the operation has been successfully executed
  OPERATION_STATUS_EXECUTED = 2;

  // OPERATION_STATUS_CANCELLED means the operation was cancelled by guardian
  OPERATION_STATUS_CANCELLED = 3;

  // OPERATION_STATUS_EXPIRED means the grace period has passed without execution
  OPERATION_STATUS_EXPIRED = 4;

  // OPERATION_STATUS_FAILED means execution was attempted but failed
  OPERATION_STATUS_FAILED = 5;
}

// Params defines the parameters for the timelock module
message Params {
  option (amino.name) = "pos/timelock/Params";

  // min_delay is the minimum time between queueing and execution (default: 24h)
  google.protobuf.Duration min_delay = 1 [
    (gogoproto.stdduration) = true,
    (gogoproto.nullable) = false
  ];

  // max_delay is the maximum allowed delay (prevents indefinite queueing)
  google.protobuf.Duration max_delay = 2 [
    (gogoproto.stdduration) = true,
    (gogoproto.nullable) = false
  ];

  // grace_period is the window after min_delay during which execution is valid
  google.protobuf.Duration grace_period = 3 [
    (gogoproto.stdduration) = true,
    (gogoproto.nullable) = false
  ];

  // emergency_delay is the reduced delay for emergency operations (min: 1h)
  google.protobuf.Duration emergency_delay = 4 [
    (gogoproto.stdduration) = true,
    (gogoproto.nullable) = false
  ];

  // guardian is the address authorized to cancel operations and emergency execute
  string guardian = 5 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

// QueuedOperation represents an operation waiting for execution
message QueuedOperation {
  // id is the unique identifier for this operation
  uint64 id = 1;

  // proposal_id is the governance proposal that created this operation
  uint64 proposal_id = 2;

  // messages are the sdk.Msg objects to execute
  repeated google.protobuf.Any messages = 3;

  // operation_hash is the cryptographic hash of the operation for verification
  bytes operation_hash = 4;

  // queued_at is when the operation was queued
  google.protobuf.Timestamp queued_at = 5 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false
  ];

  // executable_at is the earliest time the operation can be executed
  google.protobuf.Timestamp executable_at = 6 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false
  ];

  // expires_at is the latest time the operation can be executed
  google.protobuf.Timestamp expires_at = 7 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false
  ];

  // status is the current state of the operation
  OperationStatus status = 8;

  // executor is the address authorized to execute this operation
  string executor = 9 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // executed_at is when the operation was executed (if applicable)
  google.protobuf.Timestamp executed_at = 10 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = true
  ];

  // cancelled_at is when the operation was cancelled (if applicable)
  google.protobuf.Timestamp cancelled_at = 11 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = true
  ];

  // cancel_reason is the reason for cancellation (if applicable)
  string cancel_reason = 12;

  // execution_error is the error message if execution failed
  string execution_error = 13;
}

// GenesisState defines the timelock module's genesis state
message GenesisState {
  // params are the module parameters
  Params params = 1 [(gogoproto.nullable) = false];

  // operations are all queued operations
  repeated QueuedOperation operations = 2 [(gogoproto.nullable) = false];

  // next_operation_id is the next available operation ID
  uint64 next_operation_id = 3;
}
